# markdownrealcode

./: .gitignore  CHANGELOG.md  LICENSE  biome.json  justfile  markdownrealcode.cabal  markdownrealcode.vsix  mdrc.json
.github/workflows/: test.yml
app/: Main.hs
eg/: README.smd  auth.src.md  auth.ts  mdrc.json
lib/: MarkdownRealCode.hs
lsp/: LSPServer.hs  Main.hs
src/: MarkdownRealCode.hs
test/: Spec.hs
vsix/: .gitignore  .vscodeignore  README.md  build.bun.ts  extension.js  extension.ts  package.json
