cabal-version:      3.0
name:               markdownrealcode
version:            0.1.0.0
license:            BSD-3-Clause
author:             Jeremy Banka
synopsis:           Include real source code in your markdown files.

common defaults
  ghc-options:      -Wall
  build-depends:    base >= 4.12 && < 5
  default-language: Haskell2010

library
  import:           defaults
  hs-source-dirs:   src
  exposed-modules:  MarkdownRealCode
  build-depends:    base ^>=4.20.0.0
                  , filepath
                  , aeson == 2.2.3.0

executable mdrc-cli
  import:           defaults
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    markdownrealcode
                  , optparse-applicative
                  , directory
                  , filepath
                  , aeson == 2.2.3.0
                  , async == 2.2.5
                  , filemanip == 0.3.6.3
                  , fsnotify == 0.4.1.0

executable mdrc-lsp
  import:           defaults
  hs-source-dirs:   lsp
  main-is:          Main.hs
  other-modules:    LSPServer
  build-depends:    markdownrealcode
                  , lsp == 2.7.0.1
                  , lsp-types == 2.3.0.1
                  , lens == 5.3.4
                  , transformers
                  , directory
                  , filepath
                  , text

test-suite mdrc-tests
  import:           defaults
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    markdownrealcode
                  , hspec
  build-tool-depends: hspec-discover:hspec-discover